flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    name: flask

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: docker.io/kayne787/task_flask:latest
        livenessProbe:
          httpGet:
            path: /
            port: 5010
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 6
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 5010
status: {}
